--- a/about.html
+++ b/about.html
@@ -5,22 +5,22 @@
 		<link rel="icon" href="/sveltekit-static-repro/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="/sveltekit-static-repro/app_/immutable/assets/_layout-8454f68e.css" rel="stylesheet">
-		<link rel="modulepreload" href="/sveltekit-static-repro/app_/immutable/start-4a6762a4.js">
-		<link rel="modulepreload" href="/sveltekit-static-repro/app_/immutable/chunks/index-9fae8885.js">
-		<link rel="modulepreload" href="/sveltekit-static-repro/app_/immutable/chunks/singletons-3d7bfc87.js">
-		<link rel="modulepreload" href="/sveltekit-static-repro/app_/immutable/chunks/index-1b63e2e7.js">
-		<link rel="modulepreload" href="/sveltekit-static-repro/app_/immutable/components/pages/_layout.svelte-e54cd9b1.js">
-		<link rel="modulepreload" href="/sveltekit-static-repro/app_/immutable/chunks/stores-f1cb9539.js">
-		<link rel="modulepreload" href="/sveltekit-static-repro/app_/immutable/modules/pages/_layout.js-9cbb603b.js">
-		<link rel="modulepreload" href="/sveltekit-static-repro/app_/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="/sveltekit-static-repro/app_/immutable/components/pages/about/_page.svelte-de221fd4.js"><title>About</title><!-- HEAD_svelte-1ds1qyu_START --><meta name="description" content="About this app"><!-- HEAD_svelte-1ds1qyu_END -->
+		<link href="/sveltekit-static-repro/_app/immutable/assets/_layout-8454f68e.css" rel="stylesheet">
+		<link rel="modulepreload" href="/sveltekit-static-repro/_app/immutable/start-3835d130.js">
+		<link rel="modulepreload" href="/sveltekit-static-repro/_app/immutable/chunks/index-9fae8885.js">
+		<link rel="modulepreload" href="/sveltekit-static-repro/_app/immutable/chunks/singletons-b21d4b50.js">
+		<link rel="modulepreload" href="/sveltekit-static-repro/_app/immutable/chunks/index-1b63e2e7.js">
+		<link rel="modulepreload" href="/sveltekit-static-repro/_app/immutable/components/pages/_layout.svelte-16e40728.js">
+		<link rel="modulepreload" href="/sveltekit-static-repro/_app/immutable/chunks/stores-4938137a.js">
+		<link rel="modulepreload" href="/sveltekit-static-repro/_app/immutable/modules/pages/_layout.js-9cbb603b.js">
+		<link rel="modulepreload" href="/sveltekit-static-repro/_app/immutable/chunks/_layout-da46b06b.js">
+		<link rel="modulepreload" href="/sveltekit-static-repro/_app/immutable/components/pages/about/_page.svelte-de221fd4.js"><title>About</title><!-- HEAD_svelte-1ds1qyu_START --><meta name="description" content="About this app"><!-- HEAD_svelte-1ds1qyu_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 
 
-<div class="app svelte-8o1gnw"><header class="svelte-1u9z1tp"><div class="corner svelte-1u9z1tp"><a href="https://kit.svelte.dev" class="svelte-1u9z1tp"><img src="/sveltekit-static-repro/app_/immutable/assets/svelte-logo-87df40b8.svg" alt="SvelteKit" class="svelte-1u9z1tp"></a></div>
+<div class="app svelte-8o1gnw"><header class="svelte-1u9z1tp"><div class="corner svelte-1u9z1tp"><a href="https://kit.svelte.dev" class="svelte-1u9z1tp"><img src="/sveltekit-static-repro/_app/immutable/assets/svelte-logo-87df40b8.svg" alt="SvelteKit" class="svelte-1u9z1tp"></a></div>
 
 	<nav class="svelte-1u9z1tp"><svg viewBox="0 0 2 3" aria-hidden="true" class="svelte-1u9z1tp"><path d="M0,0 L1,2 C1.5,3 1.5,3 2,3 L2,0 Z" class="svelte-1u9z1tp"></path></svg>
 		<ul class="svelte-1u9z1tp"><li class="svelte-1u9z1tp"><a href="/sveltekit-static-repro/" class="svelte-1u9z1tp">Home</a></li>
@@ -28,7 +28,7 @@
 			<li class="svelte-1u9z1tp"><a href="/sveltekit-static-repro/" class="svelte-1u9z1tp">Sverdle</a></li></ul>
 		<svg viewBox="0 0 2 3" aria-hidden="true" class="svelte-1u9z1tp"><path d="M0,0 L0,3 C0.5,3 0.5,3 1,2 L2,0 Z" class="svelte-1u9z1tp"></path></svg></nav>
 
-	<div class="corner svelte-1u9z1tp"><a href="https://github.com/sveltejs/kit" class="svelte-1u9z1tp"><img src="/sveltekit-static-repro/app_/immutable/assets/github-1ea8d62e.svg" alt="GitHub" class="svelte-1u9z1tp"></a></div>
+	<div class="corner svelte-1u9z1tp"><a href="https://github.com/sveltejs/kit" class="svelte-1u9z1tp"><img src="/sveltekit-static-repro/_app/immutable/assets/github-1ea8d62e.svg" alt="GitHub" class="svelte-1u9z1tp"></a></div>
 </header>
 
 	<main class="svelte-8o1gnw">
@@ -54,14 +54,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1rxnb7w">
-			import { start } from "/sveltekit-static-repro/app_/immutable/start-4a6762a4.js";
+		<script type="module" data-sveltekit-hydrate="163134c">
+			import { start } from "/sveltekit-static-repro/_app/immutable/start-3835d130.js";
 
 			start({
 				env: {},
 				paths: {"base":"/sveltekit-static-repro","assets":"/sveltekit-static-repro"},
-				target: document.querySelector('[data-sveltekit-hydrate="1rxnb7w"]').parentNode,
-				version: "1671261138284",
+				target: document.querySelector('[data-sveltekit-hydrate="163134c"]').parentNode,
+				version: "1671262062993",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
