--- a/about/subpage.html
+++ b/about/subpage.html
@@ -14,7 +14,7 @@
 		<link rel="modulepreload" href="/sveltekit-static-repro/_app/immutable/chunks/stores-4938137a.js">
 		<link rel="modulepreload" href="/sveltekit-static-repro/_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="/sveltekit-static-repro/_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="/sveltekit-static-repro/_app/immutable/components/pages/404/_page.svelte-cc0b7b20.js">
+		<link rel="modulepreload" href="/sveltekit-static-repro/_app/immutable/components/pages/about/subpage/_page.svelte-218a901f.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -31,23 +31,23 @@
 	<div class="corner svelte-1u9z1tp"><a href="https://github.com/sveltejs/kit" class="svelte-1u9z1tp"><img src="/sveltekit-static-repro/_app/immutable/assets/github-1ea8d62e.svg" alt="GitHub" class="svelte-1u9z1tp"></a></div>
 </header>
 
-	<main class="svelte-8o1gnw"><div>this is a 404 page. it should look like the about page but with this content instead.
+	<main class="svelte-8o1gnw"><div>This is a subpage under About. This doesn&#39;t do anything.
 </div></main>
 
 	<footer class="svelte-8o1gnw"><p>visit <a href="https://kit.svelte.dev" class="svelte-8o1gnw">kit.svelte.dev</a> to learn SvelteKit</p></footer>
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1pown1h">
+		<script type="module" data-sveltekit-hydrate="1egvqgh">
 			import { start } from "/sveltekit-static-repro/_app/immutable/start-cb6a66be.js";
 
 			start({
 				env: {},
 				paths: {"base":"/sveltekit-static-repro","assets":"/sveltekit-static-repro"},
-				target: document.querySelector('[data-sveltekit-hydrate="1pown1h"]').parentNode,
+				target: document.querySelector('[data-sveltekit-hydrate="1egvqgh"]').parentNode,
 				version: "1671262333460",
 				hydrate: {
-					node_ids: [0, 3],
+					node_ids: [0, 5],
 					data: [null,null],
 					form: null
 				}
